Revert "added align self, fixed name in less"
This reverts commit a41fc3d0badcca5f4aa1a26e1db7ea31134eab7e.

--- a/src/modules/portfolio/components/portfolio-reports/portfolio-reports.styles.less
+++ b/src/modules/portfolio/components/portfolio-reports/portfolio-reports.styles.less
@@ -69,8 +69,7 @@ button.PortfolioReports__claim {
     }
   }
 
-  button.PortfolioReports__claim {
-    align-self: auto;
+  .PortfolioReports__claim {
     margin-top: 3rem;
     width: 100%;
   }
